Sun Feb  8 21:47:50 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check struct cmsgcred.

	* ext/socket/ancdata.c (anc_inspect_passcred_credentials): add
	  "(ucred)".
	  (anc_inspect_socket_creds): show struct cmsgcred too, for FreeBSD.

Sun Feb  8 21:05:35 2009  Tanaka Akira  <akr@fsij.org>

	* lib/drb/extservm.rb (DRb::ExtServManager#invoke_service_command):
	  detach spawned process.  [ruby-dev:37936]

Sun Feb  8 20:30:29 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: check struct sockcred.

	* ext/socket/ancdata.c (anc_inspect_socket_creds): new function to
	  show SCM_CREDS on NetBSD.

Sun Feb  8 19:05:24 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward/rubysig.h: extern "C" was missing.
	  [ruby-core:21929]

Sun Feb  8 18:46:15 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (anc_inspect_passcred_credentials): new
	  function to show SCM_CREDENTIALS on GNU/Linux.

Sun Feb  8 18:34:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (rb_io_s_binread): ensures file path.  [ruby-dev:37940]

Sun Feb  8 13:52:02 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/raddrinfo.c (init_unix_addrinfo): add socktype argument.
	  (addrinfo_initialize): follow init_unix_addrinfo change.
	  (addrinfo_s_unix): add optional argument: socktype

Sun Feb  8 13:09:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_APPEND_OPTION, RUBY_APPEND_OPTIONS),
	  (RUBY_PREPEND_OPTION, RUBY_PREPEND_OPTIONS): add option(s)
	  without duplication.

	* configure.in (RUBY_DEFINE_IF): changed parameter order, now
	  condition comes first.

	* configure.in (universal_binary): checks architecture macros, and
	  improved thin load paths.

Sun Feb  8 09:41:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* runruby.rb: gets extout and arch from rbconfig.rb.

Sat Feb  7 21:26:15 2009  Tanaka Akira  <akr@fsij.org>

	* test/socket/test_addrinfo.rb (test_family_addrinfo): don't use
	  www.ruby-lang.org.